--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#navList {
+  display: grid;
+  grid-template-columns: repeat(6 1fr);
+  grid-template-rows: auto;
+  padding-top: 10px;
+  background: rgb(80, 79, 79);
+  border-bottom: 4px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navItems {
+  background-color: rgb(80, 79, 79);
+  grid-column: auto;
   color: white;
+  font-size: 2.5rem;
+  padding-top: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdownContent {
+  display: none;
+  position: absolute;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+  margin-left: 50px;
+  background-color: rgb(80, 79, 79);
+}
+
+.dropdownItem {
+  text-align: left;
+  margin: 25px;
+  color: white;
+  font-size: 20px;
+}
+
+.navItems:link {
+  text-decoration: none;
+}
+
+.navItems:visited {
+  text-decoration: none;
+}
+
+.navItems:hover {
+  text-decoration: none;
+}
+
+.navItems:active {
+  text-decoration: none;
+}
+
+#firstNav {
+  grid-column: 1;
+}
+#secondNav {
+  grid-column: 2;
+}
+#thirdNav {
+  grid-column: 3;
+}
+#fourthNav {
+  grid-column: 4;
+}
+#fifthNav {
+  grid-column: 5;
+}
+#sixthNav {
+  grid-column: 6;
 }
