--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,17 @@
   padding-top: 1rem;
 }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
 .dropdownContent {
   display: none;
   opacity: 0.8;
   position: absolute;
+  border-radius: 10px;
+  padding-top: 2rem;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
 .dropdown:hover .dropdownContent {
@@ -43,7 +45,7 @@
 
 .dropdownItem {
   text-align: left;
-  margin: 25px;
+  padding: 5px;
   font-size: 20px;
 }
 
