--- a/src/Components/EpisodeInfo.css
+++ b/src/Components/EpisodeInfo.css
@@ -1,6 +1,6 @@
 .episodeBox {
   width: 100vw;
-  height: 25vh;
+  height: 300px;
   border: 1px solid black;
 }
 
@@ -8,20 +8,27 @@
   margin: 15px;
   font-size: 50px;
   text-decoration: underline;
+  height: 60px;
 }
 
 .episodeDesc {
   font-size: 25px;
-  margin-bottom: 5vh;
   margin-left: 15vw;
   margin-right: 15vw;
+  height: 120px;
 }
 
 .episodeInfoBox {
+  width: 30vw;
+  margin-right: 35vw;
+  margin-left: 35vw;
   display: flex;
-  justify-content: center;
+  position: relative;
+  height: 60px;
 }
 
 .episodeInfo {
   font-size: 20px;
+  position: absolute;
+  bottom: 0;
 }
