Start adding responsiveness

--- a/src/Components/BurgerOfTheDay.css
+++ b/src/Components/BurgerOfTheDay.css
@@ -18,7 +18,7 @@
   color: white;
   padding-top: 45vh;
   font-family: "Rock Salt", cursive;
-  font-size: 40px;
+  font-size: 4vh;
   transform: rotate(-6deg);
   margin-bottom: 0;
   padding-bottom: 0;
